# ratings

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  treefmt.toml
.sqlx/: query-0056c3a08d3fdd51de901175a932f1bdddd792c3a76fb9c012db42f041080900.json  query-017236515b1fbd68f6987606960560b1ffa6d5b8180da3452b87b4a7d1c2e55e.json  query-018d70f5157fc2c0ff0cac0f02a2ad39eeae3a54e529cee82f100ade9fb6e66f.json  query-03c32f3e64679bf3a625a6082e363c6d80782613795458e1fecbac53b592077e.json  query-08175dfa554ee93c6f0b215d057cddc580df5b9643966acd54cf401be6df76b2.json  query-0848b9d3867b42e1c4390e0f8e813363d13d0d82199bcf3e47b19576191a72df.json  query-08c1818da7af6b3b58d1dc83351a9a99152e153bb0fd578363f64d882b306118.json  query-0962e9aa21eacdae37630bec7ee3e55300067fd94e520fac85403cfb8f5529fa.json  query-0bae25ba8ebdaa709b6d4850dd3e5387d59687a27926c8d192c2c4da780c60d1.json  query-0c26a0c845d380294ee71032201dfaec805cdbc75232e94c08df51132ca6f6d8.json  query-110ceae7620c5a64d102db381d973d785ed8bacb376c43f47553ddb106a84dd2.json  query-157e43efe113ab420a23890b1eed31d7683c74145f44ef7fbf81262314b4ea97.json  query-15ed8b3c102c48c9772a8c53290ef88e97b1d936ec0343f33d2050439e40fd7f.json  query-16d4632246942fc9190357b687679fa13e695f977a0eb4b3a5d7b369d6dee66c.json  query-1e2536395db625b67523fab263b9bee9c61e278ef46179b303f7c36cef8d4520.json  query-20bb766787d9958e23b3e0143f71ea2504c99e34161c3cfb735d044fa0aa44bf.json  query-21b5e5441bc01235e16ffd64aa643df9121a3889cb2c9fb7d03174129373edb7.json  query-21d56325e1959c6141d03f15ea4990c2f03393747be0aef30119a21a7c361cc4.json  query-23d7aaf55c857234f274f55ca5e1c5c8bd46e2e15d9f9e4ee64f6a51f5cc0ca5.json  query-28b6b42ba0a0b90dceb0a2b9eddf94452044b21d1f276bdee97d6ed926154841.json  query-28f3fa5ad97f9660d82f490402794d3924c32433c5ff0b80426391e453a5ae75.json  query-300cbd54a579844fadaf2b27cec23d97dfc794554951ab4401376d681a37af70.json  query-31ce29a54dbed3d0244a4c1585c5f756cec3ea77e8a3f3708b1bb60b2ff6b8a2.json  query-324178be241697e95ada38cd9374e84058db63f9fd9be747b7ee48ad7f824933.json  (+83 more)
fixtures/: oidc_links.sql  (+5 more)
(+88 files in other folders)
