[package]
name = "ratings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-governor = "0.5"
actix-cors = "0.7"
openssl = { version = "0.10", features = ["vendored"] }
jsonwebtoken = "9.2"
argon2 = "0.5"
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "mysql",
    "macros",
    "migrate",
    "chrono",
] }
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
