[package]
name = "ratings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ratings_lib"
path = "src/lib.rs"

[[bin]]
name = "ratings"
path = "src/main.rs"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-governor = "0.10"
actix-cors = "0.7"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
argon2 = "0.5"
uuid = { version = "1.19", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "mysql",
  "macros",
  "migrate",
  "chrono",
] }
anyhow = { version = "1.0", features = ["backtrace"] }
futures = "0.3"
web-push = "0.11"
openidconnect = { version = "4.0", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }
urlencoding = "2.1.3"

[profile.release]
debug = false
lto = true
opt-level = 3
